--- a/Baha'i/Others/ROB/V3/p032-051Ch02.html
+++ b/Baha'i/Others/ROB/V3/p032-051Ch02.html
@@ -258,7 +258,7 @@
 	   * Some Tablets of Bahá'u'lláh are composed in such a way that a part of the Tablet is in the words of His amanuensis, but in fact was dictated by Bahá'u'lláh to appear as if composed by the amanuensis. Every word of the Tablet therefore is from Bahá'u'lláh Himself. For more information see vol. 1, pp. <a href="../V1/p018-044Ch03.html#p40">40</a>-42.<p>
 	   <hr>
 	   9. Unpublished.<p>
-	   10. Unpublished, except for the last part, a prayer translated by Shoghi Effendi, <i>Prayers and Meditations of Bahá'u'lláh</i>, no. 153.<br>
+	   10. Unpublished, except for the last part, a prayer translated by Shoghi Effendi, <i>Prayers and Meditations of Bahá'u'lláh</i>, <a href="../../../Baha/PM/p003-340.html#para795">no. 153</a>.<br>
 	   </small></td>
 </tr>
 <tr>
