--- a/Baha'i/Others/ROB/V3/p052-072Ch03.html
+++ b/Baha'i/Others/ROB/V3/p052-072Ch03.html
@@ -13,7 +13,7 @@
        <td>
 	   	   <FORM ACTION="p032-051Ch02.html" METHOD=GET>
 		   <INPUT TYPE=submit VALUE="<" NAME=back>
-		   </FORM>
+		   </FORM>	   
 	   </td>
        <td>
 	   	   <FORM ACTION="Contents.html" METHOD=GET>
@@ -21,12 +21,12 @@
 		   </FORM>
 		   <FORM ACTION="../../../../index.html" METHOD=GET>
 		   <INPUT TYPE=submit VALUE="H" NAME=home>
-		   </FORM>
+		   </FORM>		   
 	   </td>
        <td>
 	   	   <FORM ACTION="p073-086Ch04.html" METHOD=GET>
 		   <INPUT TYPE=submit VALUE=">" NAME=next>
-		   </FORM>
+		   </FORM>	   
 	   </td>
 </tr>
 </table>
@@ -58,6 +58,8 @@
 	   † 21 April to 2 May, in commemoration of the twelve days that Bahá'u'lláh spent in the Garden of Ridván in Baghdád in 1863 when He declared His mission to a few companions.<p>
 	   <hr>
 	   1. Published in Ishráq Khávarí, <i>Risáliy-i-Ayyám-i-Tis'ih</i>, p. 313.
+	   <hr>
+	   [Ridván] <a href="../../../Baha/KA/p258-296Index.html#Ridván"><i>The Kitáb-i-Aqdas</i></a>; <a href="../../../Baha/KI/p271-274Index.html#Ridván"><i>The Kitáb-i-Íqán</i></a>; <i>Prayers and Meditations</i>, <a href="../../../Baha/PM/p003-340.html#para8">p. 6</a>; <i>Gleanings From The Writings Of Bahá'u'lláh</i>, <a href="../../../Baha/GL/p003-346.html#para56">p. 31</a>; <i>The Revelation of Bahá'u'lláh</i>, vol. <a href="p351-363Index.html#Ridván">1</a>, <a href="../V2/p469-476Index.html#Ridván">2</a>, <a href="../V3/p467-483Index.html#Ridván">3</a>, <a href="../V4/p463-485Index.html#Ridván,Gardenof">4</a>
 	   </small></td>
 </tr>
 <tr>
@@ -105,7 +107,7 @@
 	   In about the middle of February 1869 he made his second attempt to enter the city. This time he succeeded in remaining for a longer period. He met Mírzá Áqá Ján and a few other believers who had come out of the barracks to purchase provisions. But in his letter Nabíl mentions that at last he achieved his heart's desire of seeing Bahá'u'lláh on the 18th of Muharram 1286 (1 May 1869).<p>
 	   <b>Some Early Pilgrims</b><p>
 	   The first pilgrims to succeed in entering the presence of Bahá'u'lláh were Hájí Sháh-Muhammad-i-Manshádí, entitled Amínu'l-Bayán (Trusted of the Bayán) by Bahá'u'lláh, and Hájí Abu'l-Hasan-i-Ardikání, entitled Amín-i-Ilahí (Trusted of God) by Bahá'u'lláh. Such were the services of these illustrious Trustees of Bahá'u'lláh that their story demands to be told in detail and will be found in Chapter 4.<p>
-	   Another eminent Bahá'í who came to 'Akká but was recognized and expelled from the city was Mullá Muhammad-'Alí, surnamed Nabíl-i-Qá'iní by Bahá'u'lláh.* He had known
+	   Another eminent Bahá'í who came to 'Akká but was recognized and expelled from the city was Mullá Muhammad-'Alí, surnamed Nabíl-i-Qá'iní by Bahá'u'lláh.* He had known 
 	   </td>
        <td></td>
        <td VALIGN=top><small><center><a name="p57">57</a></center><p>
@@ -166,9 +168,9 @@
    <tr>
 	   <td>
        	   <hr>
-	   </td>
+	   </td>	  
    </tr>
-   <tr>
+   <tr>   
        <td valign="top">
 	   <H1 ALIGN=center><a name="60a"></a>
 	   	   <img src="i/60a.jpg" width="300" height="425" border="0" align="middle" ALT="MÍRZÁ 'ABDU'R-RAHÍM">
@@ -185,11 +187,11 @@
    <tr>
 	   <td>
        	   <hr>
-	   </td>
+	   </td>	  
    </tr>
 </table>
 <p>
-<table border="0" cellspacing="2" cellpadding="2" height="100" bgcolor="" align="center">
+<table border="0" cellspacing="2" cellpadding="2" height="100" bgcolor="" align="center">   
    <tr>
        <td valign="top">
 	   <H1 ALIGN=center><a name="60b"></a>
@@ -210,7 +212,7 @@
 	   <small>
 	   		  <center>
 			  		  HÁJÍ ABU'L-HASAN-I-AMÍN<p>
-					  Trustee of Bahá'u'lláh and one of His Apostles
+					  Trustee of Bahá'u'lláh and one of His Apostles 
 	   		  </center>
 	   </small>
 	   </td>
@@ -221,8 +223,8 @@
 	   </td>
 	   <td>
        	   <hr>
-	   </td>
-   </tr>
+	   </td>	  	   	  
+   </tr>   
    <tr>
        <td valign="top">
 	   <H1 ALIGN=center><a name="60d"></a>
@@ -245,14 +247,14 @@
 	   		  </center>
 	   </small>
 	   </td>
-   </tr>
-
+   </tr>      
+   
 </table>
 <p>
 <table border="1" cellspacing="2" cellpadding="2" height="100" bgcolor="">
 <tr>
        <td width="80%">
-	   He calls him by the new name Rahím (Compassionate), showers His blessings upon him, and urges him to recount the experience of his pilgrimage to the friends on his return home.<p>
+	   He calls him by the new name Rahím (Compassionate), showers His blessings upon him, and urges him to recount the experience of his pilgrimage to the friends on his return home.<p> 
 	   Before leaving, Bahá'u'lláh entrusted 'Abdu'r-Rahím with Tablets to be delivered to some believers in Persia. While in Baghdád on his way to Persia, the guards saw him one day in the bazaar and became suspicious. They followed him, intending to arrest him. As soon as 'Abdu'r-Rahím realized this, he took the parcel containing the Tablets of Bahá'u'lláh out of his pocket and as he was walking along threw it into the shop nearest to him. He did this so quickly that the guards did not see it. He took this action because he knew that if the guards had discovered the Tablets of Bahá'u'lláh, not only would they have destroyed or confiscated them, but his own life would have been endangered also.<p>
 	   As he threw the parcel into the unknown shop, he put his whole trust in Bahá'u'lláh, turned to Him in prayer and begged Him to protect these Tablets through His all-embracing power. This is reminiscent of the story of the mother of Moses who placed her babe, as it lay in a box, on the river, trusting that God would take care of it and deliver it into the right hands.<p>
 	   The guards arrested 'Abdu'r-Rahím and took him into custody. After some investigations into his identity, the authorities were satisfied that he was a man of God and a harmless person. They released him and gave him a small sum of money in compensation. As he looked at the money placed in the palm of his hand, 'Abdu'r-Rahím could not help complaining to Bahá'u'lláh in his heart saying: 'You took away from me the most precious of all the things in the world--the Tablets--and gave me instead a few coins!' He then returned to the bazaar with much trepidation to see what had happened to the parcel.<p>
@@ -265,7 +267,7 @@
        <td>
 	   went near the shop again. This time there were no customers there and he saw the shopkeeper beckoning him in. He went inside. To his great surprise the shopkeeper came forward, warmly embraced him, welcomed him with the Bahá'í greeting 'Alláh'u'Abhá!' and handed him the parcel. He happened to be one of the few Bahá'ís living in Baghdád. The two men marvelled at the power of God and regarded this incident as a miracle. For there were hundreds of shops in the bazaar, but on that fateful day and at the moment when the guards were approaching him, 'Abdu'r-Rahím, a complete stranger, happened to be passing in front of the only shop which was owned by a Bahá'í.<p>
 	   The joy and gladness of 'Abdu'r-Rahím in finding the Tablets knew no bounds. He stayed a few days in the house of the Bahá'í friend, the shopkeeper. Through him he met a few believers in Baghdád, and then departed for Persia. He visited several towns and delivered the Tablets of Bahá'u'lláh to their owners. To each of the believers he recounted the stories of his pilgrimage and spoke of Bahá'u'lláh, of His power and majesty and of the unfailing confirmations which He had bestowed upon him throughout the journey. When 'Abdu'r-Rahím arrived in his native town he was like a ball of fire ignited by the hand of Bahá'u'lláh. The radiance of his face and the force of his utterance were evident to all. He began to teach the Faith fearlessly after his return from 'Akká, but this action provoked the wrath of the clergy and the fanatic populace who rose up against him and forced him out of his native town of Bushrú'íyyih. He took residence in another town, Fárán.*<p>
-	   Some years later Bahá'u'lláh conferred a great honour upon Mullá Sádiq-i-Khurásání, entitled Ismulláh'u'l-Asdaq (The name of God, the Most Truthful),† one of the most outstanding followers of the Báb and Bahá'u'lláh, by inviting him to travel
+	   Some years later Bahá'u'lláh conferred a great honour upon Mullá Sádiq-i-Khurásání, entitled Ismulláh'u'l-Asdaq (The name of God, the Most Truthful),† one of the most outstanding followers of the Báb and Bahá'u'lláh, by inviting him to travel 
 	   </td>
        <td></td>
        <td VALIGN=top><small><center><a name="p62">62</a></center><p>
@@ -384,7 +386,7 @@
 	   <blockquote>
 	   door. The kitchen in which I was working happened to be opposite the room of Bahá'u'lláh. I could see and hear Him. The Muftí asked some questions and then the Tongue of Grandeur began to speak. At one stage when the utterances of Bahá'u'lláh were still continuing, the Muftí was moved to say something. 'Abdu'l-Bahá gave him an emphatic and commanding signal with his hand that he should not interrupt the words of Bahá'u'lláh. He complied but his pride was hurt.<p>
 	   When the interview was over he left, 'Abdu'l-Bahá accompanying him to the prison gate, but he was annoyed because of the incident, for he was well respected by the inhabitants of the town and as he walked in the bazaars people showed their respect to him and kissed his hands. At that stage he was not aware of the truth of the Cause and the greatness of its Author, therefore he was displeased with the way 'Abdu'l-Bahá had bidden him be silent. But it did not take very long before he realized that in the presence of 'Abdu'l-Bahá he was as utter nothingness. He used to visit the Master and partake of His knowledge and wisdom. He therefore changed his attitude. In the streets and bazaars, whenever he accompanied 'Abdu'l-Bahá he always walked a few steps behind Him and was never found to be walking in front.* When Bahá'u'lláh was moved out of the barracks he used to come regularly to the outer apartment of the house--a room set aside for visitors--and sit at the feet of the Master. He diligently carried out every service that He referred to him.<p>
-	   As time went on the devotion of the Muftí of 'Akká towards Bahá'u'lláh and 'Abdu'l-Bahá increased. He became so attracted that once he intimated to 'Abdu'l-Bahá that every time he stood up to pray, the majestic figure of Bahá'u'lláh appeared before him. 'Abdu'l-Bahá always showered his favours upon the Muftí, as indeed on other prominent people in the land. It is true to say that a time came when the Government of 'Akká used to revolve around the person of 'Abdu'l-Bahá. Every one of the
+	   As time went on the devotion of the Muftí of 'Akká towards Bahá'u'lláh and 'Abdu'l-Bahá increased. He became so attracted that once he intimated to 'Abdu'l-Bahá that every time he stood up to pray, the majestic figure of Bahá'u'lláh appeared before him. 'Abdu'l-Bahá always showered his favours upon the Muftí, as indeed on other prominent people in the land. It is true to say that a time came when the Government of 'Akká used to revolve around the person of 'Abdu'l-Bahá. Every one of the 
 	   </blockquote>
 	   </td>
        <td></td>
@@ -412,7 +414,7 @@
        <td>
 	   	   <FORM ACTION="p032-051Ch02.html" METHOD=GET>
 		   <INPUT TYPE=submit VALUE="<" NAME=back>
-		   </FORM>
+		   </FORM>	   
 	   </td>
        <td>
 	   	   <FORM ACTION="Contents.html" METHOD=GET>
@@ -420,12 +422,12 @@
 		   </FORM>
 		   <FORM ACTION="../../../../index.html" METHOD=GET>
 		   <INPUT TYPE=submit VALUE="H" NAME=home>
-		   </FORM>
+		   </FORM>		   
 	   </td>
        <td>
 	   	   <FORM ACTION="p073-086Ch04.html" METHOD=GET>
 		   <INPUT TYPE=submit VALUE=">" NAME=next>
-		   </FORM>
+		   </FORM>	   
 	   </td>
 </tr>
 </table>
