--- a/Baha'i/Others/ROB/V3/p108-132Ch06.html
+++ b/Baha'i/Others/ROB/V3/p108-132Ch06.html
@@ -13,7 +13,7 @@
        <td>
 	   	   <FORM ACTION="p087-107Ch05.html" METHOD=GET>
 		   <INPUT TYPE=submit VALUE="<" NAME=back>
-		   </FORM>
+		   </FORM>	   
 	   </td>
        <td>
 	   	   <FORM ACTION="Contents.html" METHOD=GET>
@@ -21,12 +21,12 @@
 		   </FORM>
 		   <FORM ACTION="../../../../index.html" METHOD=GET>
 		   <INPUT TYPE=submit VALUE="H" NAME=home>
-		   </FORM>
+		   </FORM>		   
 	   </td>
        <td>
 	   	   <FORM ACTION="p133-146Ch07.html" METHOD=GET>
 		   <INPUT TYPE=submit VALUE=">" NAME=next>
-		   </FORM>
+		   </FORM>	   
 	   </td>
 </tr>
 </table>
@@ -40,7 +40,11 @@
 	   In the short period of time separating the Declaration of His Mission and His imprisonment in 'Akká, the great majority of
 	   </td>
        <td></td>
-       <td VALIGN=top><small><center><a name="p108">108</a></center><p></small></td>
+       <td VALIGN=top><small><center><a name="p108">108</a></center><p>
+	   <hr>
+	   <hr>
+	   [Ridván] <a href="../../../Baha/KA/p258-296Index.html#Ridván"><i>The Kitáb-i-Aqdas</i></a>; <a href="../../../Baha/KI/p271-274Index.html#Ridván"><i>The Kitáb-i-Íqán</i></a>; <i>Prayers and Meditations</i>, <a href="../../../Baha/PM/p003-340.html#para8">p. 6</a>; <i>Gleanings From The Writings Of Bahá'u'lláh</i>, <a href="../../../Baha/GL/p003-346.html#para56">p. 31</a>; <i>The Revelation of Bahá'u'lláh</i>, vol. <a href="p351-363Index.html#Ridván">1</a>, <a href="../V2/p469-476Index.html#Ridván">2</a>, <a href="../V3/p467-483Index.html#Ridván">3</a>, <a href="../V4/p463-485Index.html#Ridván,Gardenof">4</a>
+	   </small></td>
 </tr>
 <tr>
        <td>
@@ -83,7 +87,7 @@
 	   2. Quoted by Shoghi Effendi, <i>The Promised Day Is Come</i>, p. 28.
 	   <hr>
 	   [O King of Paris!...] <i>Epistle to the Son of the Wolf</i>, <a href="../../../Baha/EW/p001-182.html#para80">p. 47</a><p>
-	   [Give ear, O King...] <i>Epistle to the Son of the Wolf</i>, <a href="../../../Baha/EW/p001-182.html#para82">p. 47</a>
+	   [Give ear, O King...] <i>Epistle to the Son of the Wolf</i>, <a href="../../../Baha/EW/p001-182.html#para82">p. 47</a> 
 	   </small></td>
 </tr>
 <tr>
@@ -130,7 +134,7 @@
 	   <blockquote>God hath prescribed unto every one the duty of teaching His Cause. Whoever ariseth to discharge this duty, must needs, ere he proclaimeth His Message, adorn himself with the ornament of an upright and praiseworthy character, so that his words may attract the hearts of such as are receptive to his call. Without it, he can never hope to influence his hearers.<small><sup>5</sup></small></blockquote>
 	   And also He counsels His loved ones:<p>
 	   <blockquote>O people of Bahá! Subdue the citadels of men's hearts with the swords of wisdom and of utterance. They that dispute, as prompted by their desires, are indeed wrapped in a palpable veil. Say: The sword of wisdom is hotter than summer heat, and sharper than blades of steel, if ye do but understand. Draw it forth in My name and through the power of My might, and conquer, then, with it the cities of the hearts of them that have secluded themselves in the stronghold of their corrupt desires. Thus biddeth you the Pen of the All-Glorious, whilst seated beneath the swords of the wayward. If ye become aware of a sin committed by another, conceal it, that God may conceal your own sin. He, verily, is the Concealer, the Lord of grace abounding. O ye rich ones on earth! If ye encounter one who is poor, treat him not disdainfully. Reflect upon that whereof ye were created. Every one of you was created of a sorry germ.<small><sup>6</sup></small></blockquote>
-	   Another example is when Bahá'u'lláh chooses to announce, in the middle of His Tablet to Napoleon, that the two greatest Festivals in the Faith are the Festival of Ridván and the Festival of the Declaration of the Báb, and that these are followed by two other Festivals, His own birthday and that of the Báb. In this Tablet, Bahá'u'lláh also announces the formulation of the law of fasting and stipulates its duration to be nineteen days.*<p>
+	   Another example is when Bahá'u'lláh chooses to announce, in the middle of His Tablet to Napoleon, that the two greatest Festivals in the Faith are the Festival of Ridván and the Festival of the Declaration of the Báb, and that these are followed by two other Festivals, His own birthday and that of the Báb. In this Tablet, Bahá'u'lláh also announces the formulation of the law of fasting and stipulates its duration to be nineteen days.*<p> 
 	   Such is divine Revelation!<p>
 	   </td>
        <td></td>
@@ -138,7 +142,10 @@
 	   * A great part of the Tablet to Napoleon III is translated into English and published, but some passages such as those referred to above are not translated yet.<p>
 	   <hr>
 	   5. <i>Gleanings</i>, <a href="../../../Baha/GL/p003-346.html#CLVIII">CLVIII</a>.<p>
-	   6. <i>Epistle to the Son of the Wolf</i>, <a href="../../../Baha/EW/p001-182.html#para94">p. 55</a>.
+	   6. <i>Epistle to the Son of the Wolf</i>, <a href="../../../Baha/EW/p001-182.html#para94">p. 55</a>.<p>
+	   <hr>
+	   [Ridván] <a href="../../../Baha/KA/p258-296Index.html#Ridván"><i>The Kitáb-i-Aqdas</i></a>; <a href="../../../Baha/KI/p271-274Index.html#Ridván"><i>The Kitáb-i-Íqán</i></a>; <i>Prayers and Meditations</i>, <a href="../../../Baha/PM/p003-340.html#para8">p. 6</a>; <i>Gleanings From The Writings Of Bahá'u'lláh</i>, <a href="../../../Baha/GL/p003-346.html#para56">p. 31</a>; <i>The Revelation of Bahá'u'lláh</i>, vol. <a href="p351-363Index.html#Ridván">1</a>, <a href="../V2/p469-476Index.html#Ridván">2</a>, <a href="../V3/p467-483Index.html#Ridván">3</a>, <a href="../V4/p463-485Index.html#Ridván,Gardenof">4</a><p>
+	   [Fast] <a href="../../../Baha/KA/p258-296Index.html#Fasting"><i>The Kitáb-i-Aqdas</i></a>; <i>The Kitáb-i-Íqán</i>, <a href="../../../Baha/KI/p001-094.html#para39">p. 39</a>-40; <i>Tablets of Bahá'u'lláh</i>, <a href="../../../Baha/TOB/p001-270TOB.html#para313">p. 109</a>; <a href="../../../Baha/PM/Index.html#Fast"><i>Prayers and Meditations</i></a>; <a href="../../../Baha/GL/Index.html#Fast"><i>Gleanings From The Writings Of Bahá'u'lláh</i></a>; <i>The Revelation of Bahá'u'lláh</i>, <a href="../V3/p467-483Index.html#Fasting">vol. 3</a>, vol. 4 <a href="../V4/p001-010Ch01.html#p9">p. 9</a>
 	   </small></td>
 </tr>
 <tr>
@@ -160,7 +167,7 @@
        <td>
 	   <blockquote>in the path of God, Who causeth the night to return upon the day, and the day to return upon the night. Abandon thy kingdom unto the kings, and emerge from thy habitation, with thy face set towards the Kingdom, and, detached from the world, then speak forth the praises of thy Lord betwixt earth and heaven. Thus hath bidden thee He Who is the Possessor of Names, on the part of thy Lord, the Almighty, the All-Knowing.<small><sup>7</sup></small></blockquote>
 	   It is significant that very soon after the revelation of this Tablet, the temporal sovereignty of the Pope, which for centuries had proved to be the most powerful in Christendom but which had been diminishing in its power and influence for some time, was, through the potency of the words of the heavenly Father, dramatically extinguished.<p>
-	   Shoghi Effendi in his evaluation of this event has written:<p>
+	   Shoghi Effendi in his evaluation of this event has written:<p> 
 	   <blockquote>
 	   In 1870, after Bahá'u'lláh had revealed His Epistle to Pius IX, King Victor Emmanuel I went to war with the Papal states, and his troops entered Rome and seized it. On the eve of its seizure, the Pope repaired to the Lateran and, despite his age and with his face bathed in tears, ascended on bended knees the Scala Santa. The following morning, as the cannonade began, he ordered the white flag to be hoisted above the dome of St. Peter. Despoiled, he refused to recognize this 'creation of revolution,' excommunicated the invaders of his states, denounced Victor Emmanuel as the 'robber King' and as 'forgetful of every religious principle, despising every right, trampling upon every law.' Rome, 'the Eternal City, on which rest twenty-five centuries of glory,' and over which the Popes had ruled in unchallengeable right for ten centuries, finally became the seat of the new kingdom, and the scene of that humiliation which Bahá'u'lláh had anticipated and which the Prisoner of the Vatican had imposed upon himself.<p>
 	   'The last years of the old Pope,' writes a commentator on his life, 'were filled with anguish. To his physical infirmities was added the sorrow of beholding, all too often, the Faith outraged in the very heart of Rome, the religious orders
@@ -209,9 +216,9 @@
 	   <blockquote>were ye to judge fairly. Naught can be seen in Me except God and His Cause, could ye but perceive it. I am the One Whom the tongue of Isaiah hath extolled, the One with Whose name both the Torah and the Evangel were adorned...<small><sup>10</sup></small></blockquote>
 	   The exhortations of Bahá'u'lláh fell on deaf ears. Unmoved by the proclamation of so mighty a message, Alexander II ruled over his country until 1881 when he was assassinated, and with the rise of Bolshevism in 1917 his dynasty was extinguished.<p>
 	   There is a passage in this Tablet in which Bahá'u'lláh refers to the Czar's supplication to God but does not reveal its details. He writes:<p>
-	   <blockquote>We, verily, have heard the thing for which thou didst supplicate thy Lord, whilst secretly communing with Him. Wherefore, the breeze of My loving-kindness wafted forth, and the sea of My Mercy surged, and We answered thee in truth. Thy Lord, verily, is the All-Knowing, the All-Wise.<small><sup>11</sup></small></blockquote>
+	   <blockquote>We, verily, have heard the thing for which thou didst supplicate thy Lord, whilst secretly communing with Him. Wherefore, the breeze of My loving-kindness wafted forth, and the sea of My Mercy surged, and We answered thee in truth. Thy Lord, verily, is the All-Knowing, the All-Wise.<small><sup>11</sup></small></blockquote> 
 	   A certain believer Áqá Muhammad-Rahím, a native of Isfahán, was confronted with a question from a Russian Consul in Esterábád concerning the above passage. This is his story as recorded in the memoirs of Ustád 'Alí-Akbar-i-Banná* of Yazd.<p>
-	   <blockquote>Áqá Muhammad-Rahím became a believer at a time of persecutions and sufferings. But he did not become inhibited by opposition. He taught the Faith openly and as a result some people embraced the Faith while others rose up in opposition, intent upon harming him, especially his father who was bitterly against him. Eventually he had to</blockquote>
+	   <blockquote>Áqá Muhammad-Rahím became a believer at a time of persecutions and sufferings. But he did not become inhibited by opposition. He taught the Faith openly and as a result some people embraced the Faith while others rose up in opposition, intent upon harming him, especially his father who was bitterly against him. Eventually he had to</blockquote> 
 	   </td>
        <td></td>
        <td VALIGN=top><small><center><a name="p120">120</a></center><p>
@@ -253,10 +260,10 @@
        <td>
 	   These thoughts of Áqá Muhammad-Rahím, conveyed to the Russian Consul, refer to the war of 1877-8 between Russia and Turkey. The Czar went to war apparently to avenge the defeat of his father in the Crimean War. At first his armies made considerable progress and were moving toward Constantinople. Then their progress was halted by the Turks and many Russian soldiers were killed in the battles which followed. The Czar saw the prospect of defeat again, and Áqá Muhammad-Rahím thought this must have been the time that the Czar had turned to God in prayer beseeching His help. Bahá'u'lláh states in His Tablet that the Czar's prayers were answered.<p>
 	   It should be noted here that in the <i>Súriy-i-Ra'ís</i>, revealed a few years before when He was on His way to 'Akká, Bahá'u'lláh had foretold the calamities which were to befall the Turkish Government and people as a punishment from God for the cruelties they had inflicted on Him and His disciples. And later, in the <i>Kitáb-i-Aqdas</i> (The Most Holy Book), He made a further denunciation of the tyrannical regime in Turkey and prophesied its downfall.*<p>
-	   The murder of Sultán 'Abdu'l-Azíz in 1876 was the initial punishment, followed by the war of 1877-8 which brought victory to the Russians and set in motion the process of the disintegration of the Ottoman Empire. Adrianople was occupied by the Russians and no less than eleven million people were freed from the cruelties of that tyrannical regime.<p>
+	   The murder of Sultán 'Abdu'l-Azíz in 1876 was the initial punishment, followed by the war of 1877-8 which brought victory to the Russians and set in motion the process of the disintegration of the Ottoman Empire. Adrianople was occupied by the Russians and no less than eleven million people were freed from the cruelties of that tyrannical regime.<p> 
 	   <b>Tablet to Queen Victoria</b><p>
 	   A Tablet in Arabic replete with counsels and exhortations was addressed by Bahá'u'lláh to Queen Victoria. In it He proclaims the coming of the Lord in His great glory and summons her to His Cause:<p>
-	   <blockquote>O Queen in London! Incline thine ear unto the voice of thy</blockquote>
+	   <blockquote>O Queen in London! Incline thine ear unto the voice of thy</blockquote> 
 	   </td>
        <td></td>
        <td VALIGN=top><small><center><a name="p123">123</a></center><p>
@@ -272,13 +279,13 @@
 	   Bahá'u'lláh commends the Queen in this Tablet for having 'forbidden the trading in slaves' and for having 'entrusted the reins of counsel into the hands of the representatives of the people'. It should be noted here that Bahá'u'lláh in the <i>Kitáb-i-Aqdas</i>, the Book of Laws, forbids the trading of slaves. He approves the system of government in which representatives of the people take part. In His Tablet to the Queen, Bahá'u'lláh exhorts the members of the British Parliament in these words:<p>
 	   <blockquote>It behoveth them [the members of the Parliament] however, to be trustworthy among His servants, and to regard themselves as the representatives of all that dwell on earth. This is what counselleth them, in this Tablet, He Who is the Ruler, the All-Wise...Blessed is he that entereth the assembly for the sake of God, and judgeth between men with pure justice. He, indeed is of the blissful...<small><sup>14</sup></small></blockquote>
 	   What a great contrast between these sublime teachings, which constitute the distinguishing character of the future institutions of the Bahá'í Commonwealth,* and the present political systems in which everyone fights for himself and his country to the exclusion of others!<p>
-	   The fundamental teaching of the oneness of mankind, which
+	   The fundamental teaching of the oneness of mankind, which 
 	   </td>
        <td></td>
        <td VALIGN=top><small><center><a name="p124">124</a></center><p>
 	   * For a study of the Bahá'í World Commonwealth see <i>The World Order of Bahá'u'lláh</i>, pp. 161-206, and other writings of Shoghi Effendi.<p>
 	   <hr>
-	   13. <i>Proclamation</i>, p. 33.<p>
+	   13. <i>Proclamation</i>, p. 33.<p> 
 	   14. <i>ibid</i>. p. 34.<p>
 	   <hr>
 	   [trading in slaves] <i>The Kitáb-i-Aqdas</i>, <a href="../../../Baha/KA/p019-088Aqdas.html#para72">&para;72</a>
@@ -398,7 +405,7 @@
        <td>
 	   	   <FORM ACTION="p087-107Ch05.html" METHOD=GET>
 		   <INPUT TYPE=submit VALUE="<" NAME=back>
-		   </FORM>
+		   </FORM>	   
 	   </td>
        <td>
 	   	   <FORM ACTION="Contents.html" METHOD=GET>
@@ -406,12 +413,12 @@
 		   </FORM>
 		   <FORM ACTION="../../../../index.html" METHOD=GET>
 		   <INPUT TYPE=submit VALUE="H" NAME=home>
-		   </FORM>
+		   </FORM>		   
 	   </td>
        <td>
 	   	   <FORM ACTION="p133-146Ch07.html" METHOD=GET>
 		   <INPUT TYPE=submit VALUE=">" NAME=next>
-		   </FORM>
+		   </FORM>	   
 	   </td>
 </tr>
 </table>
