--- a/Baha'i/Others/ROB/V3/p343-370Ch16.html
+++ b/Baha'i/Others/ROB/V3/p343-370Ch16.html
@@ -65,7 +65,7 @@
 	   1. <i>Bahá'í Writings on Music</i>, p. 3.<p>
 	   2. <i>ibid</i>.<p>
 	   <hr>
-	   ["Teach your children..."] <i>The Kitáb-i-Aqdas</i>, <a href="../../../Baha/KA/p019-088Aqdas.html#para150">&para;150</a>
+	   ["Teach your children..."] <i>The Kitáb-i-Aqdas</i>, <a href="../../../Baha/KA/p019-088Aqdas.html#para150">&para;150</a>	   
 	   </small></td>
 </tr>
 <tr>
@@ -178,7 +178,7 @@
 	   [Nineteen Day Feast] <i>The Kitáb-i-Aqdas</i>, <a href="../../../Baha/KA/p019-088Aqdas.html#para57">&para;57</a><p>
 	   [abolition of monasticism] <i>The Kitáb-i-Aqdas</i>, <a href="../../../Baha/KA/p019-088Aqdas.html#para36">&para;36</a><p>
 	   [<i>Kalimát-i-Firdawsíyyih</i>] <i>The Revelation of Bahá'u'lláh</i>, vol. 4, <a href="../V4/p214-226Ch15.html">Ch. 15</a><p>
-	   [confession of sins] <i>The Kitáb-i-Aqdas</i>, <a href="../../../Baha/KA/p019-088Aqdas.html#para34">&para;34</a><p>
+	   [confession of sins] <i>The Kitáb-i-Aqdas</i>, <a href="../../../Baha/KA/p019-088Aqdas.html#para34">&para;34</a><p>	   
 	   </small></td>
 </tr>
 <tr>
@@ -243,7 +243,7 @@
 	   12. Persian no. <a href="../../../Baha/HiddenWords.html#persian24">24</a>.<p>
 	   13. Persian no. <a href="../../../Baha/HiddenWords.html#persian25">25</a>.<p>
 	   <hr>
-	   ["Adorn your heads..."] <i>The Kitáb-i-Aqdas</i>, <a href="../../../Baha/KA/p019-088Aqdas.html#para120">&para;120</a><p>
+	   ["Adorn your heads..."] <i>The Kitáb-i-Aqdas</i>, <a href="../../../Baha/KA/p019-088Aqdas.html#para120">&para;120</a><p>	   
 	   </small></td>
 </tr>
 <tr>
@@ -325,7 +325,11 @@
        </blockquote>
 	   </td>
        <td></td>
-       <td VALIGN=top><small><center><a name="p362">362</a></center><p></small></td>
+       <td VALIGN=top><small><center><a name="p362">362</a></center><p>
+	   <hr>
+	   <hr>
+	   [Ridván] <a href="../../../Baha/KA/p258-296Index.html#Ridván"><i>The Kitáb-i-Aqdas</i></a>; <a href="../../../Baha/KI/p271-274Index.html#Ridván"><i>The Kitáb-i-Íqán</i></a>; <i>Prayers and Meditations</i>, <a href="../../../Baha/PM/p003-340.html#para8">p. 6</a>; <i>Gleanings From The Writings Of Bahá'u'lláh</i>, <a href="../../../Baha/GL/p003-346.html#para56">p. 31</a>; <i>The Revelation of Bahá'u'lláh</i>, vol. <a href="p351-363Index.html#Ridván">1</a>, <a href="../V2/p469-476Index.html#Ridván">2</a>, <a href="../V3/p467-483Index.html#Ridván">3</a>, <a href="../V4/p463-485Index.html#Ridván,Gardenof">4</a>
+	   </small></td>
 </tr>
 <tr>
        <td>
@@ -372,7 +376,7 @@
 	   19. Quoted by Shoghi Effendi, <i>The Promised Day Is Come</i>, p. 25.<p>
 	   20. <i>Synopsis</i>. p. 17.<p>
 	   <hr>
-	   ["Enter into wedlock..."] <i>The Kitáb-i-Aqdas</i>, <a href="../../../Baha/KA/p019-088Aqdas.html#para63">&para;63</a><p>
+	   ["Enter into wedlock..."] <i>The Kitáb-i-Aqdas</i>, <a href="../../../Baha/KA/p019-088Aqdas.html#para63">&para;63</a><p>	   
 	   </small></td>
 </tr>
 <tr>
@@ -449,7 +453,7 @@
 	   24. <i>Bahá'í World Faith</i>, p. 378.<p>
 	   25. <i>Synopsis</i>, p. 25.<p>
    	   <hr>
-	   ["Consort with all religions..."] <i>The Kitáb-i-Aqdas</i>, <a href="../../../Baha/KA/p019-088Aqdas.html#para144">&para;144</a><p>
+	   ["Consort with all religions..."] <i>The Kitáb-i-Aqdas</i>, <a href="../../../Baha/KA/p019-088Aqdas.html#para144">&para;144</a><p>	   
 	   [trading in slaves] <i>The Kitáb-i-Aqdas</i>, <a href="../../../Baha/KA/p019-088Aqdas.html#para72">&para;72</a><p>
 	   </small></td>
 </tr>
