--- a/Baha'i/Others/ROB/V3/p400-421Ch18.html
+++ b/Baha'i/Others/ROB/V3/p400-421Ch18.html
@@ -13,7 +13,7 @@
        <td>
 	   	   <FORM ACTION="p371-399Ch17.html" METHOD=GET>
 		   <INPUT TYPE=submit VALUE="<" NAME=back>
-		   </FORM>
+		   </FORM>	   
 	   </td>
        <td>
 	   	   <FORM ACTION="Contents.html" METHOD=GET>
@@ -21,12 +21,12 @@
 		   </FORM>
 		   <FORM ACTION="../../../../index.html" METHOD=GET>
 		   <INPUT TYPE=submit VALUE="H" NAME=home>
-		   </FORM>
+		   </FORM>		   
 	   </td>
        <td>
 	   	   <FORM ACTION="p422-432Apndx_I.html" METHOD=GET>
 		   <INPUT TYPE=submit VALUE=">" NAME=next>
-		   </FORM>
+		   </FORM>	   
 	   </td>
 </tr>
 </table>
@@ -95,9 +95,9 @@
    <tr>
 	   <td>
        	   <hr>
-	   </td>
+	   </td>	  
    </tr>
-   <tr>
+   <tr>   
        <td valign="top">
 	   <H1 ALIGN=center><a name="facingp403"></a>
 	   	   <img src="i/403.jpg" width="425" height="300" border="0" align="middle" ALT="A VIEW OF THE AQUEDUCT">
@@ -122,7 +122,7 @@
        When his sweeping, sprinkling and tidying was done, he would set to work illuminating and binding the various books and Tablets. So his days went by, his heart happy in the presence of the Beloved of mankind. He was an excellent soul, righteous, true, worthy of the bounty of being united with his Lord, and free of the world's contagion...<p>
        He was a man short of stature, lofty of station and mind. His heart was pure, his soul luminous. During all those days when he served the Holy Threshold, he was loved by the friends and favoured by God. From time to time, a smile on His lips, the Blessed Beauty would speak to him, expressing kindness and grace<small><sup>2</sup></small>...<p>
        </blockquote>
-	   The extraordinary love and devotion that the companions of
+	   The extraordinary love and devotion that the companions of 
        </td>
        <td></td>
        <td VALIGN=top><small><center><a name="p403">403</a></center><p>
@@ -168,7 +168,7 @@
        <blockquote>
 	   As the Covenant-breakers intensified their campaign of trouble-making for the Master and went on belittling His station, many of the steadfast believers, due to their enormous love for Him, exaggerated His station. Eventually all this resulted in a situation that if a believer was moved, for instance, to compose a poem about 'Abdu'l-Bahá's servitude, he would assuredly become the recipient of the Master's unbounded favours and bounties. But if, on the contrary, he would sing His praises and exalt His name, He would be displeased, and even ask the writer to repent and beg forgiveness.<p>
        The only station that He retained for Himself was that of the appointed Interpreter of the Writings of Bahá'u'lláh. And this He did so that if a person ever sought to glorify His station by referring to the many exalted titles* by which Bahá'u'lláh had designated Him, He then would merely say, 'I am the Interpreter of the Words of God and my interpretation of all these designations is 'Abdu'l-Bahá (Servant of Bahá'u'lláh)'...At one stage He wrote many Tablets and prayers concerning His own station of servitude. Among them was a prayer which is now used as a Prayer of Visitation for 'Abdu'l-Bahá. Concerning this prayer He wrote, 'Whoso reciteth this prayer with lowliness and fervour will bring gladness and joy to the heart of this servant; it will be even as meeting Him face to face.'<p>
-       In this prayer He describes His station of servitude in
+       In this prayer He describes His station of servitude in 
        </blockquote>
 	   </td>
        <td></td>
@@ -178,13 +178,13 @@
 </tr>
 <tr>
        <td>
-	   <blockquote><
+	   <blockquote>
        such lowly terms: 'Lord! Give me to drink from the chalice of selflessness; with its robe clothe me, and in its ocean immerse me. Make me as dust in the pathway of Thy loved ones, and grant that I may offer up my soul for the earth ennobled by the footsteps of Thy Chosen ones in Thy path, O Lord of Glory in the Highest.'<p>
        O dear reader! Most of the believers know this prayer by heart and are in the habit of reciting it every morning. This is why this servant has not quoted its full text here. My appeal to you now is to recite this prayer* first and then read the flowing which is entitled:<p>
        <center><i>The story of a bitter-sweet experience</i></center><p>
        In those days when the friends in Persia were aflame with the fire of love, and at the same time, with a spirit of forbearance, burning in that fire of envy and hatred, of calumny and slander, created by the people of malice and the Covenant-breakers, Bahá'í poets and people of letters in that country used to write poems in praise and glorification of 'Abdu'l-Bahá. In laudatory and most eloquent language they used to acclaim His exalted station.<p>
        But we, the resident Bahá'ís of 'Akká, the spot round which the Concourse on High† circle in adoration, were very careful not to breathe a word about the station of sovereignty and lordship of the blessed Person of 'Abdu'l-Bahá. We knew well that He had often advised the poets that instead of singing His praise they ought to exalt His station of servitude and utter self-effacement.<p>
-       During this time, one day I received a letter from one of the handmaidens of God‡...This letter, composed in verse, and laudatory in its tone, was addressed to 'Abdu'l-Bahá in the form of a supplication to the holy presence of God. I handed the poem to the Master as He was coming down the steps of the house in front of the sea. I thought it
+       During this time, one day I received a letter from one of the handmaidens of God‡...This letter, composed in verse, and laudatory in its tone, was addressed to 'Abdu'l-Bahá in the form of a supplication to the holy presence of God. I handed the poem to the Master as He was coming down the steps of the house in front of the sea. I thought it 
        </blockquote>
 	   </td>
        <td></td>
@@ -226,7 +226,7 @@
        <td>
        During the time that Bahá'u'lláh resided in the house of 'Abbúd, His fellow exiles had fully settled down in the city of 'Akká, and most of them were successful in their humble professions. During the governorship of Ahmad Big Tawfíq, they enjoyed relative peace in their work. But with the arrival of a new Governor, 'Abdu'r-Rahmán Páshá, the situation changed. For he proved to be one of the most hostile Governors towards Bahá'u'lláh and His companions. He was very covetous and when his designs to extract money from the company of exiles failed, he submitted an inflammatory report to the authorities in Istanbul. He complained that instead of imprisonment, all the Bahá'ís in 'Akká were free and working. The response from the Sublime Porte--the office of the Grand Vizir in Istanbul--was that the edict of the Sultán must be obeyed, that they were prisoners and had no right to work.<p>
        Husayn-i-Áshchí has given a detailed account of this episode in his memoirs. It must be noted that Áqá Husayn was at the time serving a sentence in prison because of his part in the slaying of the three Azalís in 'Akká, but through the goodwill of some of the authorities, he was allowed to go every morning to the house of Bahá'u'lláh where he used to work as a cook and return to the prison at night. The following is a summary of his notes:<p>
-       <blockquote>When 'Abdu'r-Rahmán Páshá received the note from the Sublime Porte condemning the exiles to imprisonment, it boosted his arrogance. He decided to use it as a means of extracting some money for himself...Having failed to do this, one evening he called on Shaykh 'Alíy-i-Mírí, the Muftí* of 'Akká who was an admirer of 'Abdu'l-Bahá, and shared with him his plan of arresting the Bahá'ís in the morning. His plan was to arrest them as they came to open their shops and send them to prison. He also planned to restrict 'Abdu'l-Bahá's freedom of movement in the city. He solicited the support of the Muftí in this plan...That</blockquote>
+       <blockquote>When 'Abdu'r-Rahmán Páshá received the note from the Sublime Porte condemning the exiles to imprisonment, it boosted his arrogance. He decided to use it as a means of extracting some money for himself...Having failed to do this, one evening he called on Shaykh 'Alíy-i-Mírí, the Muftí* of 'Akká who was an admirer of 'Abdu'l-Bahá, and shared with him his plan of arresting the Bahá'ís in the morning. His plan was to arrest them as they came to open their shops and send them to prison. He also planned to restrict 'Abdu'l-Bahá's freedom of movement in the city. He solicited the support of the Muftí in this plan...That</blockquote> 
        </td>
        <td></td>
        <td VALIGN=top><small><center><a name="p410">410</a></center><p>
@@ -293,7 +293,7 @@
        <td>
        When we survey events in the ministry of Bahá'u'lláh, these nine years spent in the city of 'Akká can be regarded as the most depressing in His earthly life. For He was, from a human point of view, extremely enamoured of the beauty of nature. He loved oriental gardens with their perfumed flowers and shrubs. In His youth, before the birth of the Bábí Revelation until He was deprived of all His possessions at the time of Síyáh-Chál,* He spent much of His time during spring and summer in the open countryside. In His ancestral home in the village of Tákúr, in the district of Núr, He lived in beautiful surroundings. For days He used to tarry in gardens of exquisite beauty. And when the Bábí Faith was born, He used to entertain the believers on His regal estates.<p>
        'Abdu'l-Bahá in a Tablet<small><sup>10</sup></small> describes the beauty of the scenery of a summer residence where Bahá'u'lláh stayed one summer. This was in one of the villages in the area of Shimírán close to the Alburz mountain near Tihrán. This place had beautiful gardens and a lake. A huge stone platform was built in the middle of the lake. Upon it a tent was pitched surrounded by flowers. This was in the early days of the Bábí Faith and the believers used to come there, sometimes a hundred and fifty of them. Enchanted by the presence of Bahá'u'lláh, they would all sit around and chant the divine verses amid the charm of the surroundings. This is just an example of how He loved to spend His days in the countryside.<p>
-       In Baghdád too, where Bahá'u'lláh lived an austere life for many years, He was free to walk along the banks of the Tigris in the open air, or to pitch his tent in certain of the garden parks outside the city, and stay there for some time. And in Adrianople there were occasions when Bahá'u'lláh was able to spend some time in gardens which He rented. But in 'Akká for nine years He did not see even a blade of grass to rejoice His heart. Once He had made a remark to this effect and 'Abdu'l-Bahá knew that through the creative power of His Father's
+       In Baghdád too, where Bahá'u'lláh lived an austere life for many years, He was free to walk along the banks of the Tigris in the open air, or to pitch his tent in certain of the garden parks outside the city, and stay there for some time. And in Adrianople there were occasions when Bahá'u'lláh was able to spend some time in gardens which He rented. But in 'Akká for nine years He did not see even a blade of grass to rejoice His heart. Once He had made a remark to this effect and 'Abdu'l-Bahá knew that through the creative power of His Father's 
        </td>
        <td></td>
        <td VALIGN=top><small><center><a name="p415">415</a></center><p>
@@ -382,7 +382,7 @@
        <td>
 	   	   <FORM ACTION="p371-399Ch17.html" METHOD=GET>
 		   <INPUT TYPE=submit VALUE="<" NAME=back>
-		   </FORM>
+		   </FORM>	   
 	   </td>
        <td>
 	   	   <FORM ACTION="Contents.html" METHOD=GET>
@@ -390,12 +390,12 @@
 		   </FORM>
 		   <FORM ACTION="../../../../index.html" METHOD=GET>
 		   <INPUT TYPE=submit VALUE="H" NAME=home>
-		   </FORM>
+		   </FORM>		   
 	   </td>
        <td>
 	   	   <FORM ACTION="p422-432Apndx_I.html" METHOD=GET>
 		   <INPUT TYPE=submit VALUE=">" NAME=next>
-		   </FORM>
+		   </FORM>	   
 	   </td>
 </tr>
 </table>
