--- a/Baha'i/Others/ROB/V3/p422-432Apndx_I.html
+++ b/Baha'i/Others/ROB/V3/p422-432Apndx_I.html
@@ -13,7 +13,7 @@
        <td>
 	   	   <FORM ACTION="p400-421Ch18.html" METHOD=GET>
 		   <INPUT TYPE=submit VALUE="<" NAME=back>
-		   </FORM>
+		   </FORM>	   
 	   </td>
        <td>
 	   	   <FORM ACTION="Contents.html" METHOD=GET>
@@ -21,12 +21,12 @@
 		   </FORM>
 		   <FORM ACTION="../../../../index.html" METHOD=GET>
 		   <INPUT TYPE=submit VALUE="H" NAME=home>
-		   </FORM>
+		   </FORM>		   
 	   </td>
        <td>
 	   	   <FORM ACTION="p433-441Apndx_II.html" METHOD=GET>
 		   <INPUT TYPE=submit VALUE=">" NAME=next>
-		   </FORM>
+		   </FORM>	   
 	   </td>
 </tr>
 </table>
@@ -38,7 +38,7 @@
 	   The remains of the Báb and His disciple Mírzá Muhammad-Alíy-i-Zunúzí who was martyred with Him were taken to the edge of the moat outside the gate of the city of Tabríz on the evening of the day of martyrdom, 9 July 1850, and ten sentinels were posted to guard them.<p>
 	   The person who became instrumental in removing the remains of the Báb and His companion from the edge of the moat was His courageous and faithful follower Hájí Sulaymán Khán, the son of an officer in the service of the father of Muhammad Sháh. He was a highly influential man. Amír Nizám, the Prime Minister of the time, was induced to spare his life, in spite of the fact that many of his fellow believers were being put to death.<p>
 	   However, two years after the death of his Master, he too died as a martyr in a spirit of jubilant heroism, and shed a great lustre upon the infant Cause of God. It was he in whose body several incisions were made and burning candles inserted. He chanted the praises of His Lord as he was being paraded in the streets of Tihrán prior to his martyrdom with blood pouring all over his body and his flesh sizzling with the flame of the candles.*<p>
-	   The following words, uttered prior to his martyrdom and when he was informed that his life could be spared if he recanted his faith, are indicative of the courage and devotion of one who had set off from Tihrán for Tabríz with the intention of rescuing the Báb from the imminent danger that threatened His life. Having arrived two days too late, he instead had
+	   The following words, uttered prior to his martyrdom and when he was informed that his life could be spared if he recanted his faith, are indicative of the courage and devotion of one who had set off from Tihrán for Tabríz with the intention of rescuing the Báb from the imminent danger that threatened His life. Having arrived two days too late, he instead had 
 	   </td>
        <td></td>
        <td VALIGN=top><small><center><a name="p422">422</a></center><p>
@@ -77,7 +77,7 @@
 	   No one except these men knew its whereabouts. But Mírzá 'Abdu'l-Karím and Hájí Sulaymán Khán were both martyred in Tihrán in 1852 during the great massacre of the Bábís following an attempt on the life of Násiri'd-Dín Sháh. The only person left who knew of its exact whereabouts was Áqáy-i-Kalím.<p>
 	   The sacred casket remained concealed in Imám-Zádih Ma'súm until AH 1284 (1867-68). From Adrianople, Bahá'u'lláh directed Mírzá Áqá of Káshán (entitled Muníb*) to transfer the remains to another place. Áqáy-i-Kalím briefed him as to its exact location, but Muníb failed to find it. Bahá'u'lláh then addressed a Tablet to Mullá 'Alí-Akbar-i-Sháhmírzádí, known as Hájí Ákhúnd,† and Jamál-i-Burújirdí‡ instructing them to remove the casket immediately. The details of its whereabouts were again furnished by Áqáy-i-Kalím.<p>
 	   The transfer of the remains proved to be an act of providence directed by Bahá'u'lláh. For very soon after, the custodians of the Shrine of Imám-Zádih Ma'súm carried out extensive reconstruction work which would have definitely revealed the secret of that precious trust reposing behind one of the walls of the Shrine. Such a discovery could have had disastrous consequences for the protection of the sacred remains.<p>
-	   Hájí Ákhúnd and Jamál succeeded in finding the casket and removing it from the Shrine of Imám-Zádih Ma'súm. They carried it to a village outside Tihrán in which stands the celebrated shrine of Sháh 'Abdu'l-'Azím. Finding conditions unsatisfactory for depositing the casket in that area, they moved towards the village of Chashmih-Alí. On the way they came upon the Mosque of Máshá'u'lláh, an old and dilapidated building which was not commonly visited by people. They waited there until sunset. Hájí Ákhúnd opened the casket and
+	   Hájí Ákhúnd and Jamál succeeded in finding the casket and removing it from the Shrine of Imám-Zádih Ma'súm. They carried it to a village outside Tihrán in which stands the celebrated shrine of Sháh 'Abdu'l-'Azím. Finding conditions unsatisfactory for depositing the casket in that area, they moved towards the village of Chashmih-Alí. On the way they came upon the Mosque of Máshá'u'lláh, an old and dilapidated building which was not commonly visited by people. They waited there until sunset. Hájí Ákhúnd opened the casket and 
 	   </td>
        <td></td>
        <td VALIGN=top><small><center><a name="p425">425</a></center><p>
@@ -112,7 +112,7 @@
 <tr>
        <td>
 	   and courage. There is no doubt that all those who were charged by Bahá'u'lláh to carry out this important mission were assisted by the invisible forces of divine Providence.<p>
-	   Mírzá Asadu'lláh succeeded in removing the casket from the Shrine. He first took it to his own house and kept it there for some time, then he transferred it to other localities including the houses of Husayn-'Alíy-i-Isfahání (entitled Núr) and Muhammad Karím-i-Attár where it remained hidden till the year AH 1316 (1899).<p>
+	   Mírzá Asadu'lláh succeeded in removing the casket from the Shrine. He first took it to his own house and kept it there for some time, then he transferred it to other localities including the houses of Husayn-'Alíy-i-Isfahání (entitled Núr) and Muhammad Karím-i-Attár where it remained hidden till the year AH 1316 (1899).<p>	
 	   The manner in which the remains of the Báb were taken to these homes is interesting. It demonstrates that those who were charged with their protection carried out their task with great caution and wisdom.<p>
 	   The following is the translation of the spoken chronicle of Mírzá Husayn 'Alíy-i-Isfahání concerning the transfer of the remains of the Báb to his house:<p>
 	   <blockquote>
@@ -167,6 +167,9 @@
        <td></td>
        <td VALIGN=top><small><center><a name="p431">431</a></center><p>
 	   * see vol. 1, pp. <a href="../V1/p018-044Ch03.html#p26">26</a>-8.
+	   <hr>
+	   <hr>
+	   [Naw-Rúz] <i><a href="../../../Baha/KA/p258-296Index.html#Naw-Rúz">The Kitáb-i-Aqdas</a></i>; <i>Prayers and Meditations</i>, <a href="../../../Baha/PM/p003-340.html#para225">p. 67</a>; <i>The Revelation of Bahá'u'lláh</i>, vol. <a href="../V1/p351-363Index.html#Naw-Rúz">1</a>, <a href="../V2/p469-476Index.html#Naw-Rúz">2</a>, <a href="../V3/p467-483Index.html#Naw-Rúz">3</a>, <a href="../V4/p463-485Index.html#Naw-Rúz">4</a><p>
 	   </small></td>
 </tr>
 <tr>
@@ -181,6 +184,8 @@
 	   * see vol. 1, p. <a href="../V1/p257-282Ch16.html#p268">268</a>, for another important incident on that day. (A.T.)<p>
 	   <hr>
 	   2. <i>God Passes By</i>, p. 276.
+	   <hr>
+	   [Naw-Rúz] <i><a href="../../../Baha/KA/p258-296Index.html#Naw-Rúz">The Kitáb-i-Aqdas</a></i>; <i>Prayers and Meditations</i>, <a href="../../../Baha/PM/p003-340.html#para225">p. 67</a>; <i>The Revelation of Bahá'u'lláh</i>, vol. <a href="../V1/p351-363Index.html#Naw-Rúz">1</a>, <a href="../V2/p469-476Index.html#Naw-Rúz">2</a>, <a href="../V3/p467-483Index.html#Naw-Rúz">3</a>, <a href="../V4/p463-485Index.html#Naw-Rúz">4</a><p>
 	   </small></td>
 </tr>
 </table>
@@ -190,7 +195,7 @@
        <td>
 	   	   <FORM ACTION="p400-421Ch18.html" METHOD=GET>
 		   <INPUT TYPE=submit VALUE="<" NAME=back>
-		   </FORM>
+		   </FORM>	   
 	   </td>
        <td>
 	   	   <FORM ACTION="Contents.html" METHOD=GET>
@@ -198,12 +203,12 @@
 		   </FORM>
 		   <FORM ACTION="../../../../index.html" METHOD=GET>
 		   <INPUT TYPE=submit VALUE="H" NAME=home>
-		   </FORM>
+		   </FORM>		   
 	   </td>
        <td>
 	   	   <FORM ACTION="p433-441Apndx_II.html" METHOD=GET>
 		   <INPUT TYPE=submit VALUE=">" NAME=next>
-		   </FORM>
+		   </FORM>	   
 	   </td>
 </tr>
 </table>
