--- a/Baha'i/Others/ROB/V3/p467-483Index.html
+++ b/Baha'i/Others/ROB/V3/p467-483Index.html
@@ -7,6 +7,7 @@
 	 Hidden Words - added page 357
 	 Added entry for Naw-Rúz
 	 Mashriqu'l-Adhkár - changed page 342 to 343
+	 Added p 362 to entry for Ridván
 -->
 <html>
 <head>
@@ -906,7 +907,7 @@
 	   <small>
 	   Ridáy-i-Qannád, Áqá, <a href= "../V3/p001-031Ch01.html#p20">20</a><p>
 	   Ridáy-i-Sa'ádatí, Áqá, <a href= "../V3/p275-307Ch13.html#p302">302</a>-4<p>
-	   <a name="Ridván"></a>Ridván, <a href= "../V3/p052-072Ch03.html#p53">53</a> and n., <a href= "../V3/p108-132Ch06.html#p108">108</a><p>
+	   <a name="Ridván"></a>Ridván, <a href= "../V3/p052-072Ch03.html#p53">53</a> and n., <a href= "../V3/p108-132Ch06.html#p108">108</a>, <a href="p343-370Ch16.html#p362">362</a><p>
 	   Rome, <a href= "../V3/p108-132Ch06.html#p117">117</a>-18, <a href= "../V3/p147-173Ch08.html#p154">154</a><p>
 	   Rothschild, <a href= "../V3/p147-173Ch08.html#p168">168</a> and n., <a href= "../V3/p147-173Ch08.html#p172">172</a><p>
 	   Russia, Russian, <a href= "../V3/p108-132Ch06.html#p118">118</a>, <a href= "../V3/p108-132Ch06.html#p120">120</a>-23<p>
