--- a/Baha'i/Others/ROB/V3/p147-173Ch08.html
+++ b/Baha'i/Others/ROB/V3/p147-173Ch08.html
@@ -13,7 +13,7 @@
        <td>
 	   	   <FORM ACTION="p133-146Ch07.html" METHOD=GET>
 		   <INPUT TYPE=submit VALUE="<" NAME=back>
-		   </FORM>
+		   </FORM>	   
 	   </td>
        <td>
 	   	   <FORM ACTION="Contents.html" METHOD=GET>
@@ -21,12 +21,12 @@
 		   </FORM>
 		   <FORM ACTION="../../../../index.html" METHOD=GET>
 		   <INPUT TYPE=submit VALUE="H" NAME=home>
-		   </FORM>
+		   </FORM>		   
 	   </td>
        <td>
 	   	   <FORM ACTION="p174-203Ch09.html" METHOD=GET>
 		   <INPUT TYPE=submit VALUE=">" NAME=next>
-		   </FORM>
+		   </FORM>	   
 	   </td>
 </tr>
 </table>
@@ -48,7 +48,7 @@
        <td VALIGN=top><small><center><a name="p147">147</a></center><p>
 	   <hr>
 	   <hr>
-   	   ["O kings of the earth..."] <i>The Kitáb-i-Aqdas</i>, <a href="../../../Baha/KA/p019-088Aqdas.html#para78">&para;78</a>; <i>Gleanings From The Writings Of Bahá'u'lláh</i>, <a href="../../../Baha/GL/p003-346.html#CV">CV</a>; <i>The Revelation of Bahá'u'lláh</i>, vol. 2 <a href="../V2/p301-336Ch15.html#p304">p. 304</a>-305<p>
+   	   ["O kings of the earth..."] <i>The Kitáb-i-Aqdas</i>, <a href="../../../Baha/KA/p019-088Aqdas.html#para78">&para;78</a>; <i>Gleanings From The Writings Of Bahá'u'lláh</i>, <a href="../../../Baha/GL/p003-346.html#CV">CV</a>; <i>Prayers and Meditations</i>, <a href="../../../Baha/PM/p003-340.html#para129">p. 36</a>; <i>The Revelation of Bahá'u'lláh</i>, vol. 2 <a href="../V2/p301-336Ch15.html#p304">p. 304</a>-305<p>
 	   ["We see you rejoicing..."] <i>The Kitáb-i-Aqdas</i>, <a href="../../../Baha/KA/p019-088Aqdas.html#para79">&para;79</a>; <i>Gleanings From The Writings Of Bahá'u'lláh</i>, <a href="../../../Baha/GL/p003-346.html#para425">CV</a><p>
 	   </small></td>
 </tr>
@@ -102,7 +102,7 @@
 	   </td>
        <td></td>
        <td VALIGN=top><small><center><a name="p150">150</a></center><p>
-	   * Jerusalem.<p>
+	   * Jerusalem.<p> 
 	   † vol. 2, p. <a href="../V2/p055-064Ch03.html#p58">58</a>.<p>
 	   <hr>
 	   3. <i>Synopsis</i>, p. 21.<p>
@@ -118,7 +118,7 @@
 	   These are some of the prophetic words of Bahá'u'lláh revealed in the <i>Súriy-i-Ra'ís</i>:<p>
 	   <blockquote>Hearken, O Chief...to the Voice of God, the Sovereign, the Help in Peril, the Self-Subsisting...Thou hast, O Chief, committed that which hath made Muhammad, the Apostle of God, groan in the Most Exalted Paradise. The world hath made thee proud so much so that thou hast turned away from the Face through Whose brightness the Concourse on high hath been illumined. Soon thou shalt find thyself in evident loss...The day is approaching when the Land of Mystery (Adrianople) and what is beside it shall be changed, and shall pass out of the hands of the King, and commotions shall appear, and the voice of lamentation shall be raised, and the evidences of mischief shall be revealed on all sides, and confusion shall spread by reason of that which hath befallen these captives at the hands of the hosts of oppression. The course of things shall be altered, and conditions shall wax so grievous, that the very sands on the desolate hills will moan, and the trees on the mountain will weep, and blood will flow out of all things. Then wilt thou behold the people in sore distress.<small><sup>5</sup></small></blockquote>
 	   Now, in the <i>Kitáb-i-Aqdas</i>, after the revelation of the <i>Lawh-i-Fu'ád</i> in which He clearly prophesied the Sultán's extinction,* Bahá'u'lláh reveals these prophetic words:<p>
-	   <blockquote>O Spot† that are situate on the shores of the two seas! The throne of tyranny hath, verily, been established upon thee, and the flame of hatred hath been kindled within thy bosom, in such wise that the Concourse on high and they who circle around the Exalted Throne have wailed and lamented. We behold in thee the foolish ruling over the wise, and darkness vaunting itself against the light. Thou art indeed filled with manifest pride. Hath thine outward splendour made thee</blockquote>
+	   <blockquote>O Spot† that are situate on the shores of the two seas! The throne of tyranny hath, verily, been established upon thee, and the flame of hatred hath been kindled within thy bosom, in such wise that the Concourse on high and they who circle around the Exalted Throne have wailed and lamented. We behold in thee the foolish ruling over the wise, and darkness vaunting itself against the light. Thou art indeed filled with manifest pride. Hath thine outward splendour made thee</blockquote> 
 	   </td>
        <td></td>
        <td VALIGN=top><small><center><a name="p151">151</a></center><p>
@@ -134,7 +134,7 @@
        <td>
 	   <blockquote>vainglorious? By Him Who is the Lord of mankind! It shall soon perish, and thy daughters and thy widows and all the kindreds that dwell within thee shall lament. Thus informeth thee the All-Knowing, the All-Wise.<small><sup>6</sup></small></blockquote>
 	   The downfall of Sultán 'Abdu'l-Azíz, the end of his shameful reign and that of his successors, the extinction of a dynasty which had lasted for six and a half centuries, the dismemberment of an empire which had once stretched as far as Hungary in Europe to the Caspian Sea in Asia and to Oran in Africa, and above all the collapse of the Caliphate, the most powerful institution in Islám--all these took place in that short period of time after the 'Prisoner of 'Akká' had issued His clear warnings of the dire retributive calamities which were to descend upon the despotic rulers of the Land of Turkey.<p>
-	   Shoghi Effendi makes some significant remarks about the extinction of the Ottoman dynasty and the Caliphate:<p>
+	   Shoghi Effendi makes some significant remarks about the extinction of the Ottoman dynasty and the Caliphate:<p> 
 	   <blockquote>Though Bahá'u'lláh had been banished from His Native land, the tide of calamity which had swept with such fury over Him and over the followers of the Báb, was by no means receding. Under the jurisdiction of the Sultán of Turkey, the arch-enemy of His Cause, a new chapter in the history of His ever-recurring trials had opened. The overthrow of the Sultanate and the Caliphate, the twin pillars of Sunní Islám, can be regarded in no other light except as the inevitable consequence of the fierce, the sustained and deliberate persecution which the monarchs of the tottering House of 'Uthmán, the recognized successors of the Prophet Muhammad, had launched against it. From the city of Constantinople, the traditional seat of both the Sultanate and the Caliphate, the rulers of Turkey had, for a period covering almost three quarters of a century, striven, with unabated zeal, to stem the tide of a Faith they feared and abhorred. From the time Bahá'u'lláh set foot on Turkish soil and was made a virtual prisoner of the most powerful potentate of Islám to the year of the Holy Land's liberation from Turkish yoke, successive Caliphs, and in particular the</blockquote>
 	   </td>
        <td></td>
@@ -243,7 +243,7 @@
 	   * see p. <a href="p052-072Ch03.html#p62">62</a>.<p>
 	   † Khán-i-'Avámíd. (A.T.)<p>
 	   <hr>
-	   14. Quoted by Shoghi Effendi, <i>The Promised Day Is Come</i>, p. 73.<p>
+	   14. Quoted by Shoghi Effendi, <i>The Promised Day Is Come</i>, p. 73.<p> 
 	   15. <i>Synopsis</i>, p. 19.<p>
 	   <hr>
   	   ["How great the blessedness..."] <i>The Kitáb-i-Aqdas</i>, <a href="../../../Baha/KA/p019-088Aqdas.html#para84">&para;84</a>; <i>Gleanings From The Writings Of Bahá'u'lláh</i>, <a href="../../../Baha/GL/p003-346.html#para430">CV</a>
@@ -260,7 +260,7 @@
        <td></td>
        <td VALIGN=top><small><center><a name="p160">160</a></center><p>
 	   * Bahá'u'lláh. (A.T.)<p>
-	   † These are not to be taken as the exact words of Bahá'u'lláh. (A.T.)<p>
+	   † These are not to be taken as the exact words of Bahá'u'lláh. (A.T.)<p> 
 	   ‡ On the revelation of the Word of God see vol. 1, pp. <a href="../V1/p018-044Ch03.html">18</a>-44.<p>
 	   § Bahá'u'lláh had moved to the Mansion a long time before this but at times He visited 'Akká and stayed there for some time. (A.T.)
 	   <hr>
@@ -330,7 +330,7 @@
        <td width="80%">
 	   To Shaykh Báqir, a Muslim Persian Mujtahid whom Bahá'u'lláh stigmatized as 'Wolf' because of his orders to execute two illustrious Bahá'ís, Bahá'u'lláh has addressed these words:<p>
 	   <blockquote>O heedless one! Rely not on thy glory and thy power. Thou art even as the last trace of sunlight upon the mountain-top. Soon will it fade away, as decreed by God, the All-Possessing, the Most High. Thy glory, and the glory of such as are like thee, have been taken away, and this, verily, is what hath been ordained by the One with Whom is the Mother Tablet...<small><sup>18</sup></small></blockquote>
-	   In the <i>Kitáb-i-Aqdas</i> Bahá'u'lláh addresses the divines of all religions collectively; these are some extracts from His words:<p>
+	   In the <i>Kitáb-i-Aqdas</i> Bahá'u'lláh addresses the divines of all religions collectively; these are some extracts from His words:<p> 
 	   <blockquote>
 	   Say: O leaders of religion! Weigh not the Book of God with such standards and sciences as are current amongst you, for the Book itself is the unerring balance established amongst men. In this most perfect balance whatsoever the peoples and kindreds of the earth possess must be weighed, while the measure of its weight should be tested according to its own standard, did ye but know it.<p>
 	   The eye of My loving-kindness weepeth sore over you, inasmuch as ye have failed to recognize the One upon Whom ye have been calling in the daytime and in the night season, at even and at morn. Advance, O people, with snow-white faces and radiant hearts, unto the blest and crimson Spot, wherein the Sadratu'l-Muntahá is calling: 'Verily, there is none other God beside Me, the Omnipotent Protector, the Self-Subsisting!'<p>
@@ -371,7 +371,7 @@
 	   ["Say: This, verily..."] <i>The Kitáb-i-Aqdas</i>, <a href="../../../Baha/KA/p019-088Aqdas.html#para103">&para;103</a>; <i>Gleanings From The Writings Of Bahá'u'lláh</i> <a href="../../../Baha/GL/p003-346.html#para400">XCVIII</a>; <p>
 	   ["We have not entered..."] <i>The Kitáb-i-Aqdas</i>, <a href="../../../Baha/KA/p019-088Aqdas.html#para104">&para;104</a>; <i>Gleanings From The Writings Of Bahá'u'lláh</i> <a href="../../../Baha/GL/p003-346.html#para401">XCVIII</a>; <p>
 	   ["O concourse of divines! When..."] <i>The Kitáb-i-Aqdas</i>, <a href="../../../Baha/KA/p019-088Aqdas.html#para165">&para;165</a><p>
-	   ["O concourse of divines! Beware..."] <i>The Kitáb-i-Aqdas</i>, <a href="../../../Baha/KA/p019-088Aqdas.html#para169">&para;169</a><p>
+	   ["O concourse of divines! Beware..."] <i>The Kitáb-i-Aqdas</i>, <a href="../../../Baha/KA/p019-088Aqdas.html#para169">&para;169</a><p>	   
 	   </small></td>
 </tr>
 <tr>
@@ -466,7 +466,7 @@
 	   himself in the presence of the One whom he had seen some years before in that memorable dream, wearing the same clothes and the same green head-dress. With all the devotion and love in his heart Mírzá 'Azízu'lláh promptly prostrated himself at the feet of his Lord. Bahá'u'lláh bent down, helped him up to his feet and recited the verse of the <i>Qur'án</i>: 'Blessed be God, the most excellent Creator!'<p>
 	   During his stay in 'Akká, Mírzá 'Azízu'lláh attained the presence of Bahá'u'lláh and 'Abdu'l-Bahá many times. As a result, he became endowed with a new spirit of faith and assurance. The first time that he attained the presence of Bahá'u'lláh, he witnessed the revelation of Bahá'u'lláh's Tablets and heard His voice as He revealed them. This experience left an abiding impression upon him. The only regret he had was that he could not read Arabic and hence was unable to fully appreciate the Holy Writings. This was because he had left school so young and had missed the opportunity to learn Arabic. He felt remorseful over this. Someone in 'Akká volunteered to teach him Arabic, but he declined the offer as he had no time or patience to learn a language so vast in vocabulary and so complex in grammar.<p>
 	   The next day when he attained the presence of Bahá'u'lláh, he approached Him by way of the heart and begged that through His bountiful favours, He might enable him to understand Arabic without going through the usual method of learning the language. His wish was granted, and Mírzá 'Azízu'lláh one day became very excited when he found himself reading and understanding the <i>Qur'án</i> and the Tablets of Bahá'u'lláh in Arabic.<p>
-	   Many early believers were uneducated but they were endowed by Bahá'u'lláh with a knowledge which men of learning but devoid of faith did not possess. Earlier on* we have described this form of knowledge, a knowledge which wells out of the heart and is not dependent on learning. Concerning the special mission given him during his last
+	   Many early believers were uneducated but they were endowed by Bahá'u'lláh with a knowledge which men of learning but devoid of faith did not possess. Earlier on* we have described this form of knowledge, a knowledge which wells out of the heart and is not dependent on learning. Concerning the special mission given him during his last 
 	   </td>
        <td></td>
        <td VALIGN=top><small><center><a name="p171">171</a></center><p>
@@ -502,7 +502,7 @@
        <td>
 	   	   <FORM ACTION="p133-146Ch07.html" METHOD=GET>
 		   <INPUT TYPE=submit VALUE="<" NAME=back>
-		   </FORM>
+		   </FORM>	   
 	   </td>
        <td>
 	   	   <FORM ACTION="Contents.html" METHOD=GET>
@@ -510,12 +510,12 @@
 		   </FORM>
 		   <FORM ACTION="../../../../index.html" METHOD=GET>
 		   <INPUT TYPE=submit VALUE="H" NAME=home>
-		   </FORM>
+		   </FORM>		   
 	   </td>
        <td>
 	   	   <FORM ACTION="p174-203Ch09.html" METHOD=GET>
 		   <INPUT TYPE=submit VALUE=">" NAME=next>
-		   </FORM>
+		   </FORM>	   
 	   </td>
 </tr>
 </table>
