--- a/Baha'i/Others/ROB/V3/p449-454Biblio.html
+++ b/Baha'i/Others/ROB/V3/p449-454Biblio.html
@@ -13,7 +13,7 @@
        <td>
 	   	   <FORM ACTION="p442-448Apndx_III.html" METHOD=GET>
 		   <INPUT TYPE=submit VALUE="<" NAME=back>
-		   </FORM>
+		   </FORM>	   
 	   </td>
        <td>
 	   	   <FORM ACTION="Contents.html" METHOD=GET>
@@ -21,12 +21,12 @@
 		   </FORM>
 		   <FORM ACTION="../../../../index.html" METHOD=GET>
 		   <INPUT TYPE=submit VALUE="H" NAME=home>
-		   </FORM>
+		   </FORM>		   
 	   </td>
        <td>
 	   	   <FORM ACTION="p455-467Refs.html" METHOD=GET>
 		   <INPUT TYPE=submit VALUE=">" NAME=next>
-		   </FORM>
+		   </FORM>	   
 	   </td>
 </tr>
 </table>
@@ -49,7 +49,7 @@
 	   <blockquote>
 	   <i>The Brilliant Proof</i>. Syria: 1911.<p>
 	   <i>Kitábu'l-Fará'id</i>. An apologia. Cairo, undated. Written in AH 1315 (AD 1899).<p>
-	   <i>Risáliy-i-Iskandaríyyih</i>. (Unpublished treatise.)<p>
+	   <i>Risáliy-i-Iskandaríyyih</i>. (Unpublished treatise.)<p> 
 	   </blockquote>
 	   AFRÚKHTIH, DR YÚNIS KHÁN. <i>Khátirát-i-Nuh-Sáliy-i-'Akká</i>
 	   </td>
@@ -85,7 +85,7 @@
 	   <i><a href="../../../Baha/KA/Cover.html">Kitáb-i-Aqdas</a></i>. Extracts translated by Shoghi Effendi in <i>Synopsis and Codification of the Kitáb-i-Aqdas, the Most Holy Book of Bahá'u'lláh</i>. Haifa: Bahá'í World Centre, 1973.<p>
 	   <i><a href="../../../Baha/KI/Cover.html">Kitáb-i-Íqán. The Book of Certitude</a></i>. Translated by Shoghi Effendi. Wilmette, Illinois: Bahá'í Publishing Trust, rev. edn. 1974.<p>
 	   <i>Majmú'iy-i-Alváh</i> (A compilation of the Tablets of Bahá'u'lláh). Cairo, 1920.<p>
-	   <i>Prayers and Meditations by Bahá'u'lláh</i>. Translated by Shoghi Effendi. Wilmette, Illinois: Bahá'í Publishing Trust, 6th RP 1974.<p>
+	   <i><a href="../../../Baha/PM/Cover.html">Prayers and Meditations by Bahá'u'lláh</a></i>. Translated by Shoghi Effendi. Wilmette, Illinois: Bahá'í Publishing Trust, 6th RP 1974.<p>
 	   <i>The Proclamation of Bahá'u'lláh to the Kings and Leaders of the World</i>. Haifa: Bahá'í World Centre, 1967.<p>
 	   <i>Qad Ihtaraqa'l-Mukhlisún. The Fire Tablet</i>. London: Bahá'í Publishing Trust, 1980.<p>
 	   <i><a href="../../../Baha/TOB/Cover.html">Tablets of Bahá'u'lláh revealed after the Kitáb-i-Aqdas</a></i>. Compiled by the Research Department of the Universal House of Justice and translated by Habíb Taherzadeh with the assistance of a Committee at the Bahá'í World Centre. Haifa: Bahá'í World Centre, 1978.<p>
@@ -121,7 +121,7 @@
 <tr>
        <td>
 	   NABÍL-I-A'ZAM (Muhammad-i-Zarandí). <i>The Dawn-Breakers</i>. Nabíl's Narrative of the Early Days of the Bahá'í Revelation. Wilmette, Illinois: Bahá'í Publishing Trust, 1932.<p>
-	   OLIPHANT, LAURENCE. <i>Haifa, or Life in the Holy Land 1882-1885</i>. Jerusalem: Canaan Publishing House, rev. edn. 1976.<p>
+	   OLIPHANT, LAURENCE. <i>Haifa, or Life in the Holy Land 1882-1885</i>. Jerusalem: Canaan Publishing House, rev. edn. 1976.<p> 
 	   <i>Prayer, Meditation and the Devotional Attitude</i>. Extracts from the Writings of Bahá'u'lláh, 'Abdu'l-Bahá, and Shoghi Effendi. Compiled by the Research Department of The Universal House of Justice. Wilmette, Illinois: Bahá'í Publishing Trust, 1980.<p>
 	   <i>Principles of Bahá'í Administration</i>. London: Bahá'í Publishing Trust, rev. edn. 1976.<p>
 	   <i>Qur'án</i>, see <i>Koran</i>.<p>
@@ -156,7 +156,7 @@
        <td>
 	   	   <FORM ACTION="p442-448Apndx_III.html" METHOD=GET>
 		   <INPUT TYPE=submit VALUE="<" NAME=back>
-		   </FORM>
+		   </FORM>	   
 	   </td>
        <td>
 	   	   <FORM ACTION="Contents.html" METHOD=GET>
@@ -164,12 +164,12 @@
 		   </FORM>
 		   <FORM ACTION="../../../../index.html" METHOD=GET>
 		   <INPUT TYPE=submit VALUE="H" NAME=home>
-		   </FORM>
+		   </FORM>		   
 	   </td>
        <td>
 	   	   <FORM ACTION="p455-467Refs.html" METHOD=GET>
 		   <INPUT TYPE=submit VALUE=">" NAME=next>
-		   </FORM>
+		   </FORM>	   
 	   </td>
 </tr>
 </table>
